1.20.6 porting (originally provided as patch files over Discord)